--- a/Typescript/CustomElements/src/nadam/custom-elements/base-elements/accordion/accordion.template.html
+++ b/Typescript/CustomElements/src/nadam/custom-elements/base-elements/accordion/accordion.template.html
@@ -1,17 +1,13 @@
 <template id="template-accordion-item">
-		<div class="card-header">
-			<h2 class="mb-0">
-				<button class="btn btn-link collapsed" 
-					type="button" 
-					data-toggle="collapse"  
-					aria-expanded="false"> 
-					
-					Collapsible Group Item
-				</button>
-			</h2>
+	<div class="card-header"
+		data-toggle="collapse"  
+		aria-expanded="false">
+		<h3 class="mb-0">
+			
+		</h3>
+	</div>
+	<div class="collapse">
+		<div class="card-body">
 		</div>
-		<div class="collapse">
-			<div class="card-body">
-			</div>
-		</div>
+	</div>
 </template>
