--- a/Typescript/CustomElements/src/nadam/custom-elements/base-elements/modal/modal.template.html
+++ b/Typescript/CustomElements/src/nadam/custom-elements/base-elements/modal/modal.template.html
@@ -1,10 +1,4 @@
-<template id="modal-opener">
-	<!-- Button trigger modal -->
-	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#nadam-modal">		
-	</button>
-</template>
-	
-<template id="modal">
+<template id="template-modal">
 	<!-- Modal -->
 	<div class="modal fade" id="nadam-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
