refactor ndm package

--- a/Typescript/CustomElements-Demo/src/index.html
+++ b/Typescript/CustomElements-Demo/src/index.html
@@ -48,6 +48,6 @@
 	<!-- endbuild -->	
 
 	<script src="./bootstrap.js"></script>
-	<script src="./nadam.js"></script>
+	<script src="./demo.js"></script>
 </body>
 </html>
