--- a/Typescript/ndm-v1-demo/src/index.html
+++ b/Typescript/ndm-v1-demo/src/index.html
@@ -21,6 +21,7 @@
 		</style>
 	</head>
 <body>
+
 <div class="container">
 	<div class="row">
 		<label>Click to add new side page: </label>
@@ -32,17 +33,19 @@
 		<button id="modal-opener" class="btn btn-primary">Open modal</button>
 	</div>
 	<hr>
+	<div id="carousel-demo">
+		<label>Carousel </label>
+		<br>
+	</div>
+	<hr>
 	<div id="accordion-demo" class="row">
 		<label>Accordion </label>
 	</div>
-	<hr>
 </div>
 
-<div id="carousel-demo" class="row">
-	<label>Carousel </label>
-	<br>
-</div>
+<div id="hero-slide-demo">
 
+</div>
 
 	<!-- build:templates -->		
 	<!-- endbuild -->	
