--- a/Typescript/ndm-package-demo/src/index.html
+++ b/Typescript/ndm-package-demo/src/index.html
@@ -47,10 +47,10 @@
 
 </div>
 
-	<!-- build:templates -->		
-	<!-- endbuild -->	
+	<!-- build:templates -->
+	<!-- endbuild -->
 
-	<script src="./bootstrap.js"></script>
-	<script src="./demo.js"></script>
+	<!-- <script src="./bootstrap.js"></script> -->
+	<script src="./index.js"></script>
 </body>
 </html>
