fucking with npm package round 2

--- a/Typescript/ndm-package-demo/src/index.html
+++ b/Typescript/ndm-package-demo/src/index.html
@@ -50,7 +50,7 @@
 	<!-- build:templates -->
 	<!-- endbuild -->
 
-	<!-- <script src="./bootstrap.js"></script> -->
+	<script src="./bootstrap.js"></script>
 	<script src="./index.js"></script>
 </body>
 </html>
