--- a/Typescript/Redux/index.html
+++ b/Typescript/Redux/index.html
@@ -10,6 +10,10 @@
 	<input id="todo-input" type="text"></input>
 	<button id="todo-add-btn">Add</button>
 
+	<hr>
+	<ul id="todo-list"></ul>
+
+
 	<script src="./dist/index.js"></script>
 </body>
 </html>
