rxjs tutorial tryout, scraper POC finetune

--- a/Typescript/Rxjs/index.html
+++ b/Typescript/Rxjs/index.html
@@ -11,7 +11,14 @@
 		<button id="my-btn">Just a button</button>
 	</section>
 
-	<script src="./bootstrap.js"></script>
-	<script src="./nadam.js"></script>
+	<label id="label-count"></label>
+	<label id="label-name"></label>
+
+	<button id="increment">increment</button>
+	<button id="decrease">decrement</button>
+
+	<input type="text" id="input-name">
+
+	<script src="./dist/nadam.bundle.js"></script>
 </body>
 </html>
