--- a/Javascript/es6/basic/import-export.html
+++ b/Javascript/es6/basic/import-export.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<script src="./my-module.js"></script>
-	<script src="./index.js"></script>
+<head>
+<script src="./index.js" type="module"></script>
+</head>
+	
 <body>
 </body>
 </html>
