--- a/UI/my-elements/header.demo.html
+++ b/UI/my-elements/header.demo.html
@@ -19,20 +19,14 @@
 		href="../lib/jarallax/jarallax.css"/>
 	<link rel="stylesheet" href="./ndm-header.element.css">
 
-	<title>Ndm image wall</title>
-	<style>
-		ndm-img-wall {
-			max-width: 100%;
-		}
-	</style>
+	<title>Hello, world!</title>
 
+	<style>
+
+	</style>
 </head>
 <body>
-	<section class="container" id=content>
-		<h1 class="h1">Image wall added with html</h1>
-		<ndm-img-wall src="../test-images/landscapes/Ferrari_1.jpg" height="300"></ndm-img-wall>
-		<h1 class="h1">Image wall added with JS</h1>
-	</section>
+
 
     <!-- Base JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -41,10 +35,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
 	<!-- Custom JavaScript for this component -->
-	<script src="./image-wall.element.js"></script>
+	<script src="../../lib/slick/slick.min.js"></script>
+	<script src="../../lib/jarallax/jarallax.min.js"></script>
+	<script src="ndm-header.element.js"></script>
+	<script src="./carousel.config.js"></script>
+	<script src="./ndm-header.element.js"></script>
 	<script>
-		var imageWall = new ImageWallElement({src: "../test-images/landscapes/Ferrari_2.jpg", height: "120"})
-		$("#content").append(imageWall);
+		$(document).ready( function() {
+
+			
+		})
 	</script>
 </body>
 </html>
