--- a/UI/my-elements/parallax.demo.html
+++ b/UI/my-elements/parallax.demo.html
@@ -19,55 +19,14 @@
 		href="../lib/jarallax/jarallax.css"/>
 	<link rel="stylesheet" href="./ndm-header.element.css">
 
-	<title>Hello, world!</title>
+	<title>Parallax</title>
 
 	<style>
-		.single-item {
-			height: 600px;
-			overflow-y: hidden;
-		}
 
-		/* .slick-prev:before,
-		.slick-next:before { 
-			color:red !important;
-		} */
-
-		/* .slick-prev:before {
-			padding-left: 100px;
-		} */
-
-		section {
-			overflow-x: hidden;
-		}
-
-		.carousel-item {
-			width: 100%;
-			height: 600px;
-			background: rgba(100, 120, 125, .6);
-		}
-
-		.carousel-item img {
-			height: 100%;
-		}
-
-		.multiple-items {
-			height: 300px;
-			overflow-y: hidden;
-		}
-
-		.carousel-item-2 {
-			height: 300px;
-			width: auto;
-		}
-
-		#multiple_2 img {
-			height: 100%;
-			max-height: 300px;
-		}
 	</style>
 </head>
 <body>
-
+	
 
     <!-- Base JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -76,15 +35,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
 	<!-- Custom JavaScript for this component -->
-	<script src="../../lib/slick/slick.min.js"></script>
-	<script src="../../lib/jarallax/jarallax.min.js"></script>
-	<script src="ndm-header.element.js"></script>
+	<script src="../lib/slick/slick.min.js"></script>
+	<script src="../lib/jarallax/jarallax.min.js"></script>
 	<script src="./carousel.config.js"></script>
-	<script src="./ndm-header.element.js"></script>
+	<script src="./image-wall.element.js"></script>
 	<script>
 		$(document).ready( function() {
 
-			
 		})
 	</script>
 </body>
