--- a/UI/my-elements/carousel.demo.html
+++ b/UI/my-elements/carousel.demo.html
@@ -6,18 +6,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!-- Google fonts and fontawesome -->
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
 	<!-- Custom css for this element-->
 	<link rel="stylesheet" type="text/css" href="../lib/slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="../lib/slick/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css"
 		href="../lib/jarallax/jarallax.css"/>
-	<link rel="stylesheet" href="./ndm-header.element.css">
 
 	<title>Carousel</title>
 
@@ -48,18 +49,38 @@
 		#multiple_2 ndm-img-wall {
 			height: 300px;
 		}
+
+		.front-layer {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+
+			padding: 0 30px;
+
+			background: rgba(200, 100, 50, .5);
+		}
 	</style>
 </head>
 <body>
 	<h1 class="text-center h1">Single slide - container 600px height</h1>
 	<!-- Width first -->
-	<section class="container">
-		<div class="single-item">
-			<img src="../test-images/big/landscapes/Ferrari_1.jpg">
-			<img src="../test-images/big/landscapes/Ferrari_2.jpg">
-			<img src="../test-images/big/landscapes/Ferrari_3.jpg">
-			<img src="../test-images/big/landscapes/Ferrari_4.jpg">
-		</div>		
+	<section class="container d-block position-relative">
+		<div class="row">
+			<div class="single-item">
+				<img src="../test-images/big/landscapes/Ferrari_1.jpg">
+				<img src="../test-images/big/landscapes/Ferrari_2.jpg">
+				<img src="../test-images/big/landscapes/Ferrari_3.jpg">
+				<img src="../test-images/big/landscapes/Ferrari_4.jpg">
+			</div>
+			
+			<!-- <div class="front-layer">
+				<h1 class="h1">Hello front layer</h1>
+				<h2 class="h2">Sub title</h2>
+				<p class="text-center">and some text paragraph to see ho it is centered and placed within the fron layer.</p>
+			</div> -->
+		</div>
 	</section>
 
 	<h1 class="text-center h1">Single slide - container-fluid 800px height</h1>
@@ -132,8 +153,10 @@
     <!-- Base JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../lib/jquery/jquery-v3.4.0.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
 	<!-- Custom JavaScript for this component -->
 	<script src="../lib/slick/slick.min.js"></script>
@@ -144,11 +167,11 @@
 		$(document).ready( function() {
 
 			$('.single-item').slick(new SingleSlideCarouselConfig());
-			$('.single-item-2').slick(new SingleSlideCarouselConfig());
-			$('.multiple-items').slick(new MultiSlideCarouselConfig());
+			// $('.single-item-2').slick(new SingleSlideCarouselConfig());
+			// $('.multiple-items').slick(new MultiSlideCarouselConfig());
 
-			$('.multiple-items-3').slick(new SingleSlideCarouselConfig());
-			$('.multiple-items-4').slick(new SingleSlideCarouselConfig());
+			// $('.multiple-items-3').slick(new SingleSlideCarouselConfig());
+			// $('.multiple-items-4').slick(new SingleSlideCarouselConfig());
 		})
 	</script>
 </body>
