--- a/UI/my-elements/carousel.demo.html
+++ b/UI/my-elements/carousel.demo.html
@@ -15,8 +15,7 @@
 	<!-- Custom css for this element-->
 	<link rel="stylesheet" type="text/css" href="../lib/slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="../lib/slick/slick-theme.css"/>
-	<link rel="stylesheet" type="text/css"
-		href="../lib/jarallax/jarallax.css"/>
+	<link rel="stylesheet" type="text/css" href="../lib/jarallax/jarallax.css"/>
 	<link rel="stylesheet" href="./ndm-header.element.css">
 
 	<title>Carousel</title>
