--- a/UI/my-elements/carousel.demo.html
+++ b/UI/my-elements/carousel.demo.html
@@ -62,6 +62,10 @@
 
 			background: rgba(200, 100, 50, .5);
 		}
+
+		ndm-carousel img {
+			height: 100%;
+		}
 	</style>
 </head>
 <body>
@@ -151,6 +155,38 @@
 		</div>
 	</section>
 
+
+	<!--------------------------------------------------------------------------------------------------->
+
+
+	<h1 class="text-center h1">Custom element: CarouselElement used in HTML</h1>
+	<section class="container-fluid">
+		<ndm-carousel height="400" configVariableName="SingleSlideCarouselConfig">
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_1.jpg" height="800"></ndm-img-wall>
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_2.jpg" height="800"></ndm-img-wall>
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_3.jpg" height="800"></ndm-img-wall>
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_4.jpg" height="800"></ndm-img-wall>
+		</ndm-carousel>
+	</section>
+
+	<h1 class="text-center h1">Custom element: CarouselElement used in HTML with front layer</h1>
+	<section class="container-fluid">
+		<ndm-carousel height="400" configVariableName="SingleSlideCarouselConfig">
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_1.jpg" height="800"></ndm-img-wall>
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_2.jpg" height="800"></ndm-img-wall>
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_3.jpg" height="800"></ndm-img-wall>
+			<ndm-img-wall src="../test-images/big/landscapes/Ferrari_4.jpg" height="800"></ndm-img-wall>
+
+			<div class="front-layer">
+				<h1 class="h1">Hello front layer</h1>
+				<h2 class="h2">Sub title</h2>
+				<p class="text-center">and some text paragraph to see ho it is centered and placed within the fron layer.</p>
+			</div>
+		</ndm-carousel>
+	</section>
+
+	<h1 class="text-center h1">Custom element: CarouselElement added with JS: new CarouselElement({...})</h1>
+
     <!-- Base JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../lib/jquery/jquery-v3.4.0.js"></script>
@@ -159,20 +195,36 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
-	<!-- Custom JavaScript for this component -->
+	<!-- Slick and jarallax -->
 	<script src="../lib/slick/slick.min.js"></script>
 	<script src="../lib/jarallax/jarallax.min.js"></script>
-	<script src="./carousel.config.js"></script>
+
+	<!-- Custom elements and js -->
 	<script src="./image-wall.element.js"></script>
+	<script src="./carousel.config.js"></script>
+	<script src="./carousel.element.js"></script>
+
 	<script>
 		$(document).ready( function() {
 
-			$('.single-item').slick(new SingleSlideCarouselConfig());
-			// $('.single-item-2').slick(new SingleSlideCarouselConfig());
-			// $('.multiple-items').slick(new MultiSlideCarouselConfig());
+			$('.single-item').slick(SingleSlideCarouselConfig);
+			$('.single-item-2').slick(SingleSlideCarouselConfig);
+			$('.multiple-items').slick(MultiSlideCarouselConfig);
 
-			// $('.multiple-items-3').slick(new SingleSlideCarouselConfig());
-			// $('.multiple-items-4').slick(new SingleSlideCarouselConfig());
+			$('.multiple-items-3').slick(SingleSlideCarouselConfig);
+			$('.multiple-items-4').slick(SingleSlideCarouselConfig);
+
+			var carouselElement = new CarouselElement({
+				height: 400,
+				configVariableName: "SingleSlideCarouselConfig",
+				imageSources: [
+					"../test-images/big/landscapes/Ferrari_2.jpg",
+					"../test-images/big/landscapes/Ferrari_3.jpg",
+					"../test-images/big/landscapes/Ferrari_4.jpg"
+				]
+			});
+
+			document.body.appendChild(carouselElement);
 		})
 	</script>
 </body>
