--- a/Javascript/classic-js/ndm-js/src/core/value-binding.demo.html
+++ b/Javascript/classic-js/ndm-js/src/core/value-binding.demo.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="./ndm-core/dist/ndm-core.js"></script>
+	<title>Value binding demo</title>
 </head>
 
 <body>
-
 	<label id="age-label"></label>
 	<label id="name-label"></label>
 	<ul id="places-list"></ul>
@@ -26,6 +25,7 @@
 	<p>Open up dev console and use 'obj' to test the Property staffs</p>
 	<p>obj.name("új név")</p>
 	
+	<script src="./ndm-core/dist/ndm-core.js"></script>
 	<script>
 		// the html elements to test these are predefined
 		var ageElement = document.getElementById("age-label");
