playing with di container

--- a/Javascript/DI_Container/index.html
+++ b/Javascript/DI_Container/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-<script src="./di_container.js"></script>
+<script src="./registry.js"></script>
 <script src="./my-element.js"></script>
-	<script src="./index.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
